; ModuleID = '/home/carl/AnghaBench/vlc/modules/mux/extr_asf.c_bo_addle_str16.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/mux/extr_asf.c_bo_addle_str16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @bo_addle_str16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bo_addle_str16(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call signext i8 @strlen(i8* %7)
  %9 = sext i8 %8 to i32
  %10 = add nsw i32 %9, 1
  %11 = trunc i32 %10 to i8
  %12 = call i32 @bo_addle_u16(i32* %6, i8 signext %11)
  br label %13

13:                                               ; preds = %24, %2
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds i8, i8* %14, i32 1
  store i8* %15, i8** %4, align 8
  %16 = load i8, i8* %14, align 1
  store i8 %16, i8* %5, align 1
  %17 = load i32*, i32** %3, align 8
  %18 = load i8, i8* %5, align 1
  %19 = call i32 @bo_addle_u16(i32* %17, i8 signext %18)
  %20 = load i8, i8* %5, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %13
  br label %25

24:                                               ; preds = %13
  br label %13

25:                                               ; preds = %23
  ret void
}

declare dso_local i32 @bo_addle_u16(i32*, i8 signext) #1

declare dso_local signext i8 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
